FIX: Removed tokenPredicate from UseCase
Need to rethink how this is going to work to include Lore &
  Persona